edited bg circles

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <div class="describe fade-in-left">
                 <h1 class="hi">Hi !</h1>
                 <h1>
-                    <span class="khaled">I'm Khaled Mansour.</span> <br />
+                    <span class="typing">I'm Khaled Mansour.</span> <br />
                     a Mobile Developer
                 </h1>
                 <p>
@@ -92,10 +92,8 @@
                         />
                     </defs>
                     </svg>
-                    <span class="typing">
                     <strong>lutter Developer</strong> building clean & user-friendly
                     cross-platform apps.
-                    </span>
                 </p>
                 <a href="#projects" class="btn"><span>View My Work</span></a>
                 </div>
@@ -184,40 +182,15 @@
                 <h3 class="title zoom">My <b>Projects</b></h3>
                 <div class="project-cards fade-in">
                 <div class="project-card">
-                    <img src="imgs/project-bg.png" alt="" />
-                    <div class="project-card-text">
-                    <p class="project-title">Mobile App Design</p>
-                    <h3 class="project-main-title">Art Station E-Commerce</h3>
-                    <p class="project-des">
-                        Vivamus eleifend convallis ante, non pharetra libero molestie
-                        laoreet. Donec id imperdiet lacus.
-                    </p>
-                    <p class="run btn"><span>Run Project</span></p>
-                    <p class="btn download">
-                        <span><i class="fa-solid fa-download"></i></span>
-                    </p>
-                    </div>
+                    <img class="project-img" src="imgs/ecommerce-app-img.png" alt="">
+                    <h3 class="project-title">E-commerece Application</h3>
+                    <p>Products, cart and checkout — seamless shopping.</p>
+                    <div class="btn project-dtails">More Details...</div>
                 </div>
-
-                <div class="project-view">
-                    <img src="imgs/project.png" alt="" />
-                </div>
-
+                
                 <div class="project-card">
-                    <img src="imgs/project-bg.png" alt="" />
-                    <div class="project-card-text">
-                    <p class="project-title">Mobile App Design</p>
-                    <h3 class="project-main-title">Art Station E-Commerce</h3>
-                    <p class="project-des">
-                        Vivamus eleifend convallis ante, non pharetra libero molestie
-                        laoreet. Donec id imperdiet lacus.
-                    </p>
-                    <p class="run btn"><span>Run Project</span></p>
-                    <p class="btn download">
-                        <span><i class="fa-solid fa-download"></i></span>
-                    </p>
-                    </div>
-                </div>
+                    <img class="project-img" src="imgs/ecommerce-app-img.png" alt="">
+                    
                 </div>
             </div>
         </section>
