--- a/index.html
+++ b/index.html
@@ -24,6 +24,11 @@
         href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
         rel="stylesheet"
         />
+        <meta property="og:title" content="Ecommerce App" />
+        <meta property="og:description" content="Modern ecommerce layout with sidebar, cards and data table" />
+        <meta property="og:image" content="imgs/ecommerce-app-img.png" />
+        <meta property="og:url" content="https://example.com" />
+        <meta name="twitter:card" content="summary_large_image" />
     </head>
     <body>
         <header>
@@ -185,12 +190,14 @@
                     <img class="project-img" src="imgs/ecommerce-app-img.png" alt="">
                     <h3 class="project-title">E-commerece Application</h3>
                     <p>Products, cart and checkout — seamless shopping.</p>
-                    <div class="btn project-dtails">More Details...</div>
+                    <a class="btn project-dtails"><span>More Details...</span></a>
                 </div>
                 
                 <div class="project-card">
                     <img class="project-img" src="imgs/ecommerce-app-img.png" alt="">
-                    
+                    <h3 class="project-title">E-commerece Application</h3>
+                    <p>Products, cart and checkout — seamless shopping.</p>
+                    <a class="btn project-dtails"><span>More Details...</span></a>
                 </div>
             </div>
         </section>
