--- a/index.html
+++ b/index.html
@@ -151,12 +151,12 @@
                 <span>Skills</span> <br />
                 My Expertise
                 </h3>
-                <div class="cards-grid flex-box fade-in">
+                <div class="cards-grid flex-box">
                     <div class="card">
                         <div class="card-front">
                             <div class="icon"><img src="imgs/flutter-logo.svg" alt="" /></div>
                             <div class="skill-title">Flutter & Dart</div>
-                            <div>
+                            <div class="skill-bar-cont">
                                 <div class="skill-bar" data-progress="90" style="width:0%"></div>
                             </div>
                             <p>0%</p>
@@ -173,7 +173,7 @@
                         <div class="card-front">
                             <div class="icon"><img src="imgs/figma-logo.svg" alt="" /></div>
                             <div class="skill-title">UI/UX Implementation</div>
-                            <div>
+                            <div class="skill-bar-cont">
                                 <div class="skill-bar" data-progress="85" style="width:0%"></div>
                             </div>
                             <p>0%</p>
@@ -190,7 +190,7 @@
                         <div class="card-front">
                             <div class="icon"><i class="fa-solid fa-code"></i></div>
                             <div class="skill-title">Clean Code</div>
-                            <div>
+                            <div class="skill-bar-cont">
                                 <div class="skill-bar" data-progress="60" style="width:0%"></div>
                             </div>
                             <p>0%</p>
