Edited typing animation

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 <h1 class="hi">Hi !</h1>
                 <h1>
                     <span class="typing">I'm Khaled Mansour.</span> <br />
-                    <span class="typing">a Mobile Developer</span>
+                    <span class="typing-sec">a Mobile Developer.</span>
                 </h1>
                 <p>
                     <svg
