added scrolling bar

--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
         <meta name="twitter:card" content="summary_large_image" />
     </head>
     <body>
+        <div class="scroller-cont">
+            <div class="scroller"></div>
+        </div>
         <div class="projects-details">
             <div class="project-details">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum, sapiente fuga necessitatibus maxime, velit vel fugiat reiciendis rem facilis quas minima iste! At quam reprehenderit perferendis similique commodi voluptates dolorem?</p>
@@ -120,7 +123,7 @@
         <section class="about" id="about">
             <div class="container">
                 <div class="flex-box about-content">
-                <div class="personal-img zoom"><img src="imgs/logo.jpeg" alt="" /></div>
+                <div class="personal-img bounce-top"><img src="imgs/logo.jpeg" alt="" /></div>
                 <div class="about-describe fade-in">
                     <h3
                     calss="about-title"
