--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
                 <i class="bx bx-phone"></i>
                 </a>
             </div>
-            <p>Copyright © 2025 @Mahmoud.</p>
+            <p>Copyright © 2025 <a target="_blank" href="https://mahmouddeebo.netlify.app">@Mahmoud</a></p>
         </footer>
 
         <script src="JS/main.js"></script>
